Fix alignment issues with css styling

--- a/style.css
+++ b/style.css
@@ -7,16 +7,18 @@ html, body {
   }
 
 .title-bar {
-    background-color: white;
+    background-color: black;
+    color: white;
     text-align: center;
-    padding: 0;
+    padding: 1em;
     margin: 0;
 }
 
 .container {
     margin: auto;
+    padding-bottom: 1em;
     text-align: center;
-    width: 20em;
+    width: 25em;
     height: auto;
     border: solid white 3px;
     color: white;
@@ -25,17 +27,16 @@ html, body {
 .row {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     min-height: 3em;
     width: 100%;
-    gap: .2em;
-    padding: .5em;
     box-sizing: border-box;
 }
 
 .row--display {
     padding: 0;
+    height: 5em;
 }
 
 .item {
@@ -44,9 +45,9 @@ html, body {
     min-height: 2.5em;
     align-items: center;
     justify-content: center;
-    padding: .5em;
-    margin-left: .2em;
-    margin-right: .2em
+    box-sizing: border-box;
+    min-width: 0;
+    margin: .3em;
 }
 
 .button {
@@ -55,8 +56,8 @@ html, body {
     color: white;
     border-radius: 50%;
     border-color: white;
-    height: 50px;
-    width: 50px;
+    height: 60px;
+    width: 60px;
     font-size: larger;
     font-weight: bolder;
     font-family: 'Courier New', Courier, monospace;
@@ -69,18 +70,25 @@ html, body {
 .button--clear {
     background-color: gray;
     border-radius: 2%;
-    width: 100px;
+    width: fit-content;
 }
 
 .display {
-    height: 3em;
     align-self: center;
     justify-content: center;
     border: 0;
     padding: 0;
     background-color: black;
+    font-size: x-large;
+    font-weight: bolder;
 }
 
 .footer {
-    background-color: white;
+    background-color: black;
+    color: white;
+    text-align: center;
+    font-size: large;
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: bolder;
+    padding: 1em;
 }
